@@ -255,3 +255,4 @@
 20260108 ./var/www/cjdns/hia/watchlist/pubk.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/walk/l.sh added.
 20260108 ./var/www/cjdns/hia/watchlist/walk/top.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/walk/walk.sh added.
